--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 awesome-slugify==1.6.5
 cssmin==0.2.0
-Flask==0.11.1
-Flask-Analytics==0.5.5
+Flask==0.12
+Flask-Analytics==0.6.0
 Flask-Assets==0.12
 Flask-Mail==0.9.1
-Flask-Migrate==2.0.0
+Flask-Migrate==2.0.2
 Flask-Misaka==0.4.1
 Flask-SQLAlchemy==2.1
-Flask-User==0.6.8
+Flask-User==0.6.10
 Flask-WaffleConf==0.3.1
-Flask-WTF==0.12
+Flask-WTF==0.13.1
+pygments==2.1.3
