--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,15 @@ blinker==1.4
 Flask==1.1.1
 Flask-Analytics==0.6.0
 Flask-Assets==2.0
-Flask-Babel==0.12.2
+Flask-Babel==1.0.0
 Flask-Discussion==0.1.0
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-Mail==0.9.1
 Flask-Misaka==1.0.0
 Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.2
+Flask-WTF==0.14.3
 hashids==1.2.0
 passlib>=1.7.2
-Pygments==2.5.2
-pytz==2019.3
+Pygments>=2.5.2
 -e git+https://github.com/maxcountryman/flask-uploads.git#egg=Flask-Uploads
