Added Spanish translation

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,5 @@
 [python: akamatsu/**.py]
 [jinja2: akamatsu/**/templates/**.html]
+extensions=jinja2.ext.autoescape,jinja2.ext.with_,webassets.ext.jinja2.AssetsExtension
 [jinja2: akamatsu/**/templates/**.txt]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
